--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to right, #4CAF50, #2196F3);
+   background: url("https://th.bing.com/th/id/OIP.RYIHSBcDzRLyBGF8CvCGYAHaEo?rs=1&pid=ImgDetMain&cb=idpwebp2&o=7&rm=3");
+       background-repeat:no-repeat;
+    background-position:center;
+    background-size: cover;
 }
 
 .container {
